<resources>
    <string name="app_name">MiniPuntoVenta_Adriana</string>
    <string name="btn_inicio">INICIO</string>
    <string name="text_usuario">Usuario</string>
    <string name="text_password">Contraseña</string>
    <string name="btn_inventario">INVENTARIO</string>
    <string name="btn_salir">SALIR</string>

    <string name="btn_insertar">INSERTAR</string>
    <string name="textID">ID del producto:</string>
    <string name="Edit_ID">ID del producto</string>
    <string name="text_nombre">Nombre del producto:</string>
    <string name="Edit_nombre">Nombre del producto:</string>
    <string name="text_precio">Precio:</string>
    <string name="Edit_precio">Precio</string>
    <string name="text_cantidad">Cantidad:</string>
    <string name="Edit_cantidad">Cantidad</string>

    <string name="btn_eliminar">ELIMINAR</string>
    <string name="numero">0</string>
    <string name="text_fecha">Fecha</string>
    <string name="textFecha">Fecha:</string>
    <string name="btn_guardar">GUARDAR</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="btn_Salir">SALIR</string>

    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="titulo">VENTA</string>
    <string name="btn_Finalizar_Venta">Finalizar Venta</string>

    <string name="btn_venta">VENTA</string>
    <string name="btn_buscar">BUSCAR</string>
    <string name="text_insertar">AGREGAR PRODUCTOS</string>
</resources>