<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".insertar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_insertar"
            android:textSize="20sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/id_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textID"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/nombre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nombre"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/nombre_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:hint="@string/Edit_nombre"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/precio_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_precio"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/precio_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:hint="@string/Edit_precio"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cantidad_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Edit_cantidad"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/cantidad_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:hint="@string/Edit_cantidad"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_guardar"/>

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/btnCancelar"/>

            <Button
                android:id="@+id/btn_salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/btn_salir"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>