<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="70sp"
            android:src="@drawable/tienda" />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:hint="@string/text_usuario"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/text_password" />

        <Button
            android:id="@+id/iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_inicio" />

    </LinearLayout>


</LinearLayout>