<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".menu">

    <Button
        android:id="@+id/btn_venta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_venta"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_inventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_inventario"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_insertar_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Insertar Producto"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_eliminar_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eliminar Producto"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_actualizar_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Actualizar Producto"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_salir"
        android:textSize="20sp"
        android:gravity="center"/>

</LinearLayout>
